[tool.poetry]
name = "mqttgpio"
version = "0.0.1"
description = "MQTT GPIO Controller for Raspberry Pi"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^2.0"
paho-mqtt = "^2.0.0"
schedule = "^1.1.0"
mypy = "^1.0"
black = "^24.1.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
